fixe alignment , issue #198

--- a/webcompat/static/css/development/page/issues.css
+++ b/webcompat/static/css/development/page/issues.css
@@ -122,6 +122,7 @@
 
 .issue__login_link {
   margin-top: 2.5em;
+  text-align:center;
 }
 
 .issue__label:after {
